
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.4-pl
====================================
- [#MODX-2391] Fixed issues with FC rules not being respected on resource/create with default values for new Resource
- [#MODX-2382] Fixed dynamic width of fields in windows across ui
- [#MODX-2383] Fix inability to update rank of TV's in template editor
- [#MODX-2379] Fixed issue where permission checks were swapped in Resource context menu with regards to delete/undelete
- [#MODX-2384] Fixed issue where treepanel still showed if all trees were hidden via permissions
- [#MODX-2389] Fixed issue where setup options, license and readme displays were not cleared after installation of package
- Fixed issue where loading mask shows up and never disappears on extended Resource types
- [#MODX-2388] Fixed issue with save button and user settings
- [#MODX-2387] Fixed issue with user settings not able to be added via mgr ui
- Fixed bug that would reset provider for updated packages
- Fixed issue with paging toolbar pageSize being interpreted as string rather than int
- Fixed issue where parent id constraint was ignored for default template on new Resources
- Added sanitization to REQUEST_URI for login controller
- Updated version to 2.0.4-pl

MODx Revolution 2.0.3-pl (September 30, 2010)
====================================
- Fixed error in modResource::cleanAlias when context var is not available
- [#MODX-2376] Fixed issues with updating settings on the context page
- Fixed security issue with login screen and resource TV controller that allowed html injection
- Fixed issue where clear cache checkbox isn't checked on Element pages
- [#MODX-2370] Fixed various bugs with plugin event association on plugin page
- [#MODX-1823] Improved the System Info panel by extracting data from phpinfo()