@@ -1,0 +1,3 @@
+<?php
+require_once dirname(dirname(__FILE__)).'/index.php';
+$modx->request->handleRequest(array('location' => 'system/classmap'));
