@@ -1,0 +1,8 @@
+<?php
+/**
+ * @package modx
+ * @subpackage mysql
+ */
+class modClassMap extends xPDOSimpleObject {
+}
+?>
