@@ -1,0 +1,9 @@
+<?php
+/**
+ * @package modx
+ * @subpackage mysql
+ */
+require_once (dirname(dirname(__FILE__)) . '/modclassmap.class.php');
+class modClassMap_mysql extends modClassMap {
+}
+?>
