@@ -282,7 +282,7 @@ MODx.panel.WebLink = function(config) {
         ,description: _('resource_content_type_help')
         ,name: 'content_type'
         ,id: 'modx-resource-content-type'
-        ,width: 300
+        ,anchor: '70%'
         ,value: config.record.content_type || 1
     });
     va.push({
@@ -291,17 +291,19 @@ MODx.panel.WebLink = function(config) {
         ,description: _('resource_contentdispo_help')
         ,name: 'content_dispo'
         ,id: 'modx-resource-content-dispo'
-        ,width: 300
+        ,anchor: '70%'
         ,value: config.record.content_dispo || 1
     });
     va.push({
-        xtype: 'textfield'
+        xtype: 'modx-combo-class-map'
         ,fieldLabel: _('class_key')
         ,name: 'class_key'
+        ,hiddenName: 'class_key'
         ,id: 'modx-resource-class-key'
+        ,baseParams: { action: 'getList', parentClass: 'modResource' }
         ,allowBlank: false
-        ,value: config.record.class_key || 'modStaticResource'
-        ,width: 250
+        ,value: config.record.class_key || 'modWebLink'
+        ,anchor: '70%'
     });
     it.push({
         id: 'modx-page-settings'
