@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.4-pl
 ====================================
+- [#MODX-2375] Improved class key field in Resource panel to a dropdown, added modClassMap for easier querying of resource/element types
 - [#MODX-2391] Fixed issues with FC rules not being respected on resource/create with default values for new Resource
 - [#MODX-2382] Fixed dynamic width of fields in windows across ui
 - [#MODX-2383] Fix inability to update rank of TV's in template editor
